--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: This is a title.
+description: Drop back here in a few weeks and maybe there will be some inane writing to check out.
