--- a/_config.yml
+++ b/_config.yml
@@ -13,19 +13,20 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-lang: en-US
-title: My Awesome Site
-email:
-description:
+lang: en-GB
+title: Rung by Rung
+email: samckclarke@gmail.com
+description: "Description goes here."
 baseurl: # the optional subpath of your site, e.g. "/blog"
 url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 author:
-  name:
+  name: Sam Clarke
   twitter:
   picture:
 twitter_username:
-github_username:
+github_username: samsarana
 logo: # path of site logo, e.g. "/assets/images/logo.png"
+copyright: © 2020 Sam Clarke.
 search: # true, false (default)
 search_full_content: false # true, false (default)
 search_provider: # lunr (default), algolia
@@ -47,7 +48,7 @@ feed:
   path: atom.xml
 
 # Pagination - https://jekyllrb.com/docs/pagination/
-paginate: 10
+paginate: 5
 paginate_path: /page:num/
 
 # Exclude from processing.
@@ -83,3 +84,7 @@ defaults:
     values:
       layout: post
       read_time: true
+
+# Disqus
+disqus:
+  shortname: samsarana
