--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,13 @@
 lang: en-GB
 title: Rung by Rung
 email: samckclarke@gmail.com
-description: "Description goes here."
+description:
 baseurl: # the optional subpath of your site, e.g. "/blog"
 url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 author:
   name: Sam Clarke
   twitter:
-  picture:
+  picture: /assets/images/profile-pic.jpg
 twitter_username:
 github_username: samsarana
 logo: # path of site logo, e.g. "/assets/images/logo.png"
